# Skyrim_Drag-n-Drop

./: .gitignore  AGENTS.md  DragAndDrop.esp  Handoff_2026-04-22.md  README.md  make_zip.ps1
DragAndDrop_spriggit/: .gitkeep  .spriggit  RecordData.yaml
DragAndDrop_spriggit/MagicEffects/: DragDropGrabEffect - 000801_DragAndDrop.esp.yaml  DragDropImpactEffect - 000806_DragAndDrop.esp.yaml  DragDropImpactHitEffect - 000807_DragAndDrop.esp.yaml  DragDropRagdollEffect - 000806_DragAndDrop.esp.yaml  DragDropReleaseEffect - 000803_DragAndDrop.esp.yaml
DragAndDrop_spriggit/Quests/: DragDropQuest - 000802_DragAndDrop.esp.yaml
DragAndDrop_spriggit/Spells/: DragDropGrabSpell - 000800_DragAndDrop.esp.yaml  DragDropImpactCloakSpell - 000809_DragAndDrop.esp.yaml  DragDropImpactSpell - 000808_DragAndDrop.esp.yaml  DragDropRagdollSpell - 000807_DragAndDrop.esp.yaml
DragAndDrop_spriggit_test/: RecordData.yaml
DragAndDrop_spriggit_test/MagicEffects/: DragDropEquipEffect - 000804_DragAndDrop.esp.yaml  DragDropImpactEffect - 000806_DragAndDrop.esp.yaml  DragDropImpactHitEffect - 000807_DragAndDrop.esp.yaml  DragDropReleaseEffect - 000803_DragAndDrop.esp.yaml
DragAndDrop_spriggit_test/Quests/: DragDropQuest - 000802_DragAndDrop.esp.yaml
DragAndDrop_spriggit_test/Spells/: DragDropEquipAbility - 000805_DragAndDrop.esp.yaml  DragDropImpactCloakSpell - 000809_DragAndDrop.esp.yaml  DragDropImpactSpell - 000808_DragAndDrop.esp.yaml
SKSE/: CMakeLists.txt  vcpkg-configuration.json
SKSE/Plugins/: DragAndDrop.ini
SKSE/src/: DragHandler.cpp  DragHandler.h  Hooks.cpp  Hooks.h  PCH.h  main.cpp
Source/Scripts/: DragDrop.psc  DragDropGrabScript.psc  DragDropImpactScript.psc  DragDropQuest.psc  DragDropRagdollScript.psc  DragDropReleaseScript.psc
docs/: CASTSPELL-HOOK-DEBUGLOG.md  CODEBASE-AUDIT.md  G-KEY-JITTER-BUG-DEBUGLOG.md  IMPACT-KNOCKBACK-DEBUGLOG.md  INI-SETTINGS.md  STIFF-NPC-DEBUGLOG.md
docs/plans/: SETTINGS-REFACTOR-PLAN.md
docs/research/: Research-Alternative_NPC_Dragging_Methods_2026-04-22.md  Research-GrabActor_Archetype_2026-04-22.md  Research-GrabAndThrow_2025-01-22.md  Research-Skyrim-SE-Drag-Carry-Methods_2026-04-22.md  Research-hkpMouseSpringAction_memory_layout_2026-04-22.md
docs/specs/: cleanup-hooks.md  (+2 more)
scripts/: DragDrop.pex  DragDropGrabScript.pex  DragDropImpactScript.pex  DragDropQuest.pex  DragDropRagdollScript.pex  DragDropReleaseScript.pex
(+1 files in other folders)
